# TGbot_for_posting

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
app/: Dockerfile  init_db.py  main.py
app/api/routes/: posts.py  users.py
app/crud/: post.py  user.py
app/database/: database.py
app/models/: post.py  user.py
app/schemas/: post.py  user.py
app/utils/: jwt.py  security.py
bot/: Dockerfile  api.py  bot.py  handlers.py  keyboards.py  middlewares.py  states.py
